--- a/src/main/resources/my.properties
+++ b/src/main/resources/my.properties
@@ -1,6 +1,6 @@
-apiKey =8a38631b13814bb5b58aaada65ae2e29
+apiKey =1ef74fa63ad54fef8a3051e877193954
 base_url=https://api.spoonacular.com/
-hash =ed527b0d80a3ae5a7a45ab365e230e2bf4a6194f
-user_name=
+hash =b1509a0a62f80c54ea9ae78a759d66987062c7b8
+user_name=fier86@mail.ru
 spoonacularPassword =qwerasdf112233
 url=http://localhost:8189/market/api/v1/
